fixed overflow in all games off

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -187,6 +187,7 @@
 }
 
 #allGames {
+  overflow-x: scroll;
   display: flex;
   justify-content: flex-start;
 }
